# Oscimorph

./: .gitignore  LICENSE  README.md  desktop.ini  install_dependencies.bat  install_dependencies.sh  pyproject.toml  requirements.txt  run_oscimorph.bat  run_oscimorph.sh
.github/workflows/: macos-smoke.yml  windows-smoke.yml
app/: README.md  gui_old_backup.py  pyproject.toml
app/docs/: changelog.md  guide.md
app/docs/dev/: README.md  architecture.md  audio.md  gui.md  known-gaps.md  presets.md  render-pipeline.md  script-api.md
app/legal/: LICENSE.txt
app/presets/: chaos_drive.json  crt_monitor.json  neon_glow.json  spectral_spin.json  warped_trails.json  wireframe_pulse.json
app/scripts/: fractal_tree.py  hypotrochoid.py  julia_set.py  lissajous.py  lorenz_attractor.py  mandelbrot_orbit.py  smoke_render.py  smoke_startup.py
app/src/: oscimorph_boot.py
app/src/oscimorph/: app.py  runtime.py
app/src/oscimorph/gui/: __init__.py  implementation.py  legacy.py  main_window.py  preview.py  widgets.py  workers.py
app/src/oscimorph/render/: __init__.py  core.py  modulation.py  pipeline.py  postfx.py  progress.py  settings.py  text.py
packaging/pyinstaller/: oscimorph.spec
packaging/windows/: build_windows_release.ps1  oscimorph_installer.iss  smoke_packaged_app.ps1
presets/: aurora_drift.json  classic_scope.json  scanline_crunch.json
scripts/: dragon_curve.py  fractal_tree.py  particle_swarm.py  rose_curve.py  spirograph.py
src/oscimorph/: app.py  audio.py  gui.py  render.py
